gitops/manifests/manyfold/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: manyfold
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manyfold
  namespace: manyfold
  labels:
    app: manyfold
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manyfold
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: manyfold
        app.kubernetes.io/name: manyfold
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: manyfold
          image: ghcr.io/manyfold3d/manyfold:0.143.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3214
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: libraries
              mountPath: /libraries
      volumes:
        - name: libraries
          persistentVolumeClaim:
            claimName: manyfold-libraries-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: manyfold
  namespace: manyfold
  labels:
    app: manyfold
spec:
  selector:
    app: manyfold
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3214
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: manyfold-internal
  namespace: manyfold
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`manyfold.local.timmybtech.com`)
      kind: Rule
      services:
        - name: manyfold
          port: 80
  tls:
    secretName: local-timmybtech-com-tls
